Fix overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,12 @@ html {
   box-sizing: border-box;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family:
